--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -23,7 +23,7 @@ steps:
 
   - script: |
       $helmVersion = helm show chart $(Agent.BuildDirectory)/s/$(repo) | awk '/version:/ {print $2}'
-      Write-Host "##vso[task.setvariable variable=version;]$helmVersion"
+      echo "##vso[task.setvariable variable=version;]$helmVersion"
     displayName: Set version    
   
   - task: HelmInstaller@1
