--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -27,8 +27,7 @@ steps:
       helmVersionToInstall: 'latest'
 
   - script: |
-      $helmVersion = helm show chart $(Agent.BuildDirectory)/s/$(repo) | awk '/version:/ {print $2}'
-      echo "##vso[task.setvariable variable=version;]$helmVersion"
+      echo "##vso[task.setvariable variable=version;]helm show chart $(Agent.BuildDirectory)/s/$(repo) | awk '/version:/ {print $2}'"
     displayName: Set version    
 
   - checkout: helmRepo
