--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -26,7 +26,7 @@ steps:
     inputs:
       helmVersionToInstall: 'latest'
 
-  - script: |
+  - bash: |
       helmVersion=$(helm show chart $(Agent.BuildDirectory)/s/$(repo) | awk '/version:/ {print $2}')
       echo "##vso[task.setvariable variable=version;]$helmVersion"
     displayName: Set version    
