--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -27,7 +27,7 @@ steps:
       helmVersionToInstall: 'latest'
 
   - bash: |
-      helmVersion=$(helm show chart $(Agent.BuildDirectory)/s/$(repo) | awk '/version:/ {print $2}')
+      helmVersion=$(helm show chart $(Agent.BuildDirectory)/s/$(repo)/$(repo) | awk '/version:/ {print $2}')
       echo "##vso[task.setvariable variable=version;]$helmVersion"
     displayName: Set version    
 
