--- a/helm-library/templates/_horozontal-pod-autoscaler.yaml
+++ b/helm-library/templates/_horozontal-pod-autoscaler.yaml
@@ -1,3 +1,5 @@
+{{- define "helm-library.horozontal-pod-autoscaler.tpl" -}}
+{{- $requiredMsg := include "helm-library.default-check-required-msg" . -}}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -9,3 +11,7 @@ spec:
     name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
   minReplicas: {{ required (printf $requiredMsg "minReplicas") .Values.deployment.minReplicas }}
   maxReplicas: {{ required (printf $requiredMsg "maxReplicas") .Values.deployment.maxReplicas }}
+{{- end }}
+{{- define "helm-library.horozontal-pod-autoscaler" -}}
+{{- include "helm-library.util.merge" (append . "helm-library.horozontal-pod-autoscaler.tpl") -}}
+{{- end -}}
