Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -16,6 +16,7 @@ variables:
   helmRepo: helm-charts
   helmRepositoryUrl: git@github.com:johnwatson484/helm-charts.git
   version:
+  releaseExists: false
 
 steps: 
   - checkout: self
@@ -61,6 +62,14 @@ steps:
       git push origin HEAD:master
     displayName: Update Helm repo
 
+  - task: PowerShell@2
+    displayName: Check GitHub release
+    inputs:
+      targetType: 'inline'
+      script: |
+        $releaseExists = (Invoke-RestMethod -SkipHttpErrorCheck -Uri 'https://api.github.com/repos/johnwatson484/$(repo)/releases/tags/$(version)').tag_name -eq '$(version)'
+        Write-Host "##vso[task.setvariable variable=releaseExists;]$releaseExists"
+
   - task: GitHubRelease@1
     displayName: GitHub release
     inputs:
@@ -75,3 +84,4 @@ steps:
       changeLogCompareToRelease: 'lastFullRelease'
       changeLogType: 'commitBased'
     continueOnError: true
+    condition: and(succeeded(), eq(variables.releaseExists, false))
