Linkerd ingress added

--- a/helm-library/templates/_ingress.yaml
+++ b/helm-library/templates/_ingress.yaml
@@ -8,6 +8,11 @@ metadata:
     {{- include "helm-library.labels" . | nindent 4 }}
   annotations:
     kubernetes.io/ingress.class: {{  required (printf $requiredMsg ".ingress.class") .Values.ingress.class | quote }}
+    {{- if eq .Values.ingress.class "nginx" }}
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
+      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
+    {{- end }}
 spec:
   {{- if .Values.ingress.host }}
   tls:
