Remove Secret name requirement

--- a/helm-library/templates/_secret.yaml
+++ b/helm-library/templates/_secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ required (printf $requiredMsg "secret.name") .Values.secret.name | quote }}
+  name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
 type: {{ required (printf $requiredMsg "secret.type") .Values.secret.type | quote }}
