Auto pod recreation added

--- a/helm-library/templates/_deployment.yaml
+++ b/helm-library/templates/_deployment.yaml
@@ -22,7 +22,7 @@ spec:
         {{- include "helm-library.labels" . | nindent 8 }}
       annotations:
         linkerd.io/inject: enabled
-        redeployOnChange: {{ required (printf $requiredMsg "deployment.redeployOnChange") .Values.deployment.redeployOnChange | quote }}
+        redeployOnChange: {{ randAlphaNum 5 | quote }}
     spec:
       {{- if .Values.serviceAccount }}
       {{- if .Values.serviceAccount.roleArn }}
