Fix cron volume

--- a/helm-library/templates/_cron-job.yaml
+++ b/helm-library/templates/_cron-job.yaml
@@ -14,6 +14,13 @@ spec:
       template:
         spec:
           restartPolicy: {{ required (printf $requiredMsg "cronJob.restartPolicy") .Values.cronJob.restartPolicy | quote }}
+          securityContext:
+            fsGroup: {{ .Values.deployment.runAsUser | default 1000 }}
+            runAsUser: {{ .Values.deployment.runAsUser | default 1000 }}
+            runAsNonRoot: {{ .Values.deployment.runAsNonRoot | default true }}
+          volumes:
+          - name: temp-dir
+            emptyDir: {}
           containers:
           -
 {{ include "helm-library.container.tpl" . | indent 12 }}
