--- a/helm-library/templates/_cron-job.yaml
+++ b/helm-library/templates/_cron-job.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       template:
         spec:
-          restartPolicy: {{ required (printf $requiredMsg "cronJob.restartPolicy") .Values.cronJob.restartPolicy | quote }}
+          restartPolicy: {{ .Values.cronJob.restartPolicy | default "Always" | quote }}
           securityContext:
             fsGroup: {{ .Values.cronJob.runAsUser | default 1000 }}
             runAsUser: {{ .Values.cronJob.runAsUser | default 1000 }}
