--- a/helm-library/templates/_container.yaml
+++ b/helm-library/templates/_container.yaml
@@ -10,7 +10,8 @@ command:
 args:
   {{- toYaml .Values.container.args | nindent 12 }}
 {{- end }}
-imagePullPolicy: {{ required (printf $requiredMsg "container.imagePullPolicy") .Values.container.imagePullPolicy | quote }}
+imagePullPolicy: {{ .Values.container.imagePullPolicy | default "Always" | quote }}
+{{- if .Values.container.resources }}
 securityContext:
   readOnlyRootFilesystem: {{ .Values.container.readOnlyRootFilesystem | default true }}
   allowPrivilegeEscalation: {{ .Values.container.allowPrivilegeEscalation | default false }}
