Set ingress port

--- a/helm-library/templates/_ingress.yaml
+++ b/helm-library/templates/_ingress.yaml
@@ -50,7 +50,7 @@ spec:
           service:
             name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
             port:
-              number: {{ required (printf $requiredMsg "service.port") .Values.service.port }}
+              number: 80
 {{- end }}
 {{- end }}
 {{- define "helm-library.ingress" -}}
