--- a/helm-library/templates/_ingress.yaml
+++ b/helm-library/templates/_ingress.yaml
@@ -39,7 +39,7 @@ spec:
           service:
             name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
             port:
-              number: {{ required (printf $requiredMsg "service.port") .Values.service.port }}
+              number: 80
 {{- if .Values.ingress.host }}
   - host: www.{{ .Values.ingress.host }}
     http:
