library template updates and test chart (#1)
* library template updates and test chart

Added a test chart to consume the library templates.
* includes test script for local debugging
* includes new github workflow for testing on PR

Modified library templates to be more feature complete for our anticpated use cases.

* fix typo

* debug

* debug

* more looping debug

* typo

--- a/helm-library/templates/_configmap.yaml
+++ b/helm-library/templates/_configmap.yaml
@@ -6,7 +6,10 @@ metadata:
   name: {{ required (printf $requiredMsg "configmap.name") .Values.name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
-data: {}
+data:
+{{- with .Values.configMap.data -}}
+{{ toYaml . | nindent 2 }}
+{{- end }}
 {{- end }}
 {{- define "helm-library.configmap" -}}
 {{- include "helm-library.util.merge" (append . "helm-library.configmap.tpl") -}}
