--- a/helm-library/templates/_service.yaml
+++ b/helm-library/templates/_service.yaml
@@ -3,11 +3,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name | quote}}
+  name: {{ required (printf $requiredMsg "name") (coalesce .Values.service.name .Values.name) | quote}}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
 spec:
   type: {{ required (printf $requiredMsg "service.type") .Values.service.type | quote }}
+  {{- if .Values.service.ports }}
+  ports:
+    {{- range .Values.service.ports }}
+    - name: {{ required (printf $requiredMsg "service.ports.name") .name | quote }}
+      port: {{ required (printf $requiredMsg "service.ports.port") .port | int }}
+      targetPort: {{ required (printf $requiredMsg "service.ports.targetPort") .targetPort | int }}
+      protocol: {{ default "TCP" .protocol | quote }}
+      {{- if .nodePort }}
+      nodePort: {{ .nodePort }}
+      {{- end }}
+    {{- end }}
+  {{- else if .Values.service.port }}
+  port: {{ required (printf $requiredMsg "service.port") .Values.service.port | int }}
+  {{- end }}
+  selector:
+    {{- include "helm-library.selector-labels" . | nindent 4 }}
 {{- end -}}
 {{- define "helm-library.service" -}}
 {{- include "helm-library.util.merge" (append . "helm-library.service.tpl") -}}
