change job logic (#6)

--- a/.github/workflows/unified-workflow.yml
+++ b/.github/workflows/unified-workflow.yml
@@ -64,7 +64,7 @@ jobs:
           KUBEAPI_VERSION=${WF_KUBEAPI_VERSION:-"1.26.5"}
           helm template . | kubeconform -strict -summary -kubernetes-version $KUBEAPI_VERSION -exit-on-error
   deploy:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.workflow.steps.test.outcome == 'success'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' 
     needs: test
     environment:
       name: github-pages
