--- a/.github/workflows/unified-workflow.yml
+++ b/.github/workflows/unified-workflow.yml
@@ -67,21 +67,22 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main' 
     needs: test
     environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      name: artifact-deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - name: Install Helm
-        uses: azure/setup-helm@v3     
+        uses: azure/setup-helm@v3
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
